<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="fourth_fragment_label">Fourth Fragment</string>
    <string name="next">Вперёд</string>
    <string name="previous">Назад</string>

    <string name="first_fragment_button">1 step</string>
    <string name="second_fragment_button">2 step</string>
    <string name="third_fragment_button">3 step</string>
    <string name="fourth_fragment_button">4 step</string>

    <string name="first_fragment">Введите первое число:</string>
    <string name="second_fragment">Введите второе число:</string>
    <string name="third_fragment">Выберите математическую операцию:</string>
    <string name="fourth_fragment">Результат:</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>

</resources>