<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment"
    android:id="@+id/fragment_container">

    <!--СОДЕРЖИМОЕ ФРАГМЕНТА-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_fragment"
        android:layout_gravity="center"
        android:textSize="20sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:text="@string/plus"
            android:textSize="20sp">
        </Button>

        <Button
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:text="@string/minus"
            android:textSize="20sp">
        </Button>

        <Button
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:text="@string/multiply"
            android:textSize="20sp">
        </Button>

        <Button
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:text="@string/divide"
            android:textSize="20sp">
        </Button>

    </LinearLayout>

    <!--НАВИГАЦИЯ-->
    <FrameLayout
        android:id="@+id/navigation_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_margin="10dp"
            android:backgroundTint="@color/grey">
        </Button>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:backgroundTint="@color/teal_700">
        </Button>

    </FrameLayout>

</FrameLayout>