<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthFragment"
    android:id="@+id/fragment_container">

    <!--КНОПКИ С ФРАГМЕНТАМИ-->
    <LinearLayout
        android:id="@+id/fragments_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:text="@string/first_fragment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/fragment_1"
            android:visibility="visible"/>

        <Button
            android:text="@string/second_fragment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/fragment_2"
            android:visibility="visible"/>

        <Button
            android:text="@string/third_fragment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/fragment_3"
            android:visibility="visible"/>

        <Button
            android:text="@string/fourth_fragment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/fragment_4"
            android:visibility="visible"/>

    </LinearLayout>

    <!--СОДЕРЖИМОЕ ФРАГМЕНТА-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth_fragment"
        android:layout_gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center">
        </TextView>
        <TextView
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center">
        </TextView>
        <TextView
            android:id="@+id/second_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="="
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center">
        </TextView>
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center">
        </TextView>

    </LinearLayout>

    <!--НАВИГАЦИЯ-->
    <FrameLayout
        android:id="@+id/navigation_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_margin="10dp"
            android:backgroundTint="@color/grey">
        </Button>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>